# codingpractise

./: README.md
hackerRankPractise/problemSolving/: CMakeLists.txt
hackerRankPractise/problemSolving/acmTeam/: CMakeLists.txt  acmTeam.cpp
hackerRankPractise/problemSolving/angryProfessor/: CMakeLists.txt  angryProfessor.cpp
hackerRankPractise/problemSolving/appendAndDelete/: CMakeLists.txt  appendAndDelete.cpp
hackerRankPractise/problemSolving/beautifulDays/: CMakeLists.txt  beautifulDays.cpp
hackerRankPractise/problemSolving/catAndMouse/: CMakeLists.txt  catAndMouse.cpp
hackerRankPractise/problemSolving/circularArrayRotation/: CMakeLists.txt  circularArrayRotation.cpp
hackerRankPractise/problemSolving/climbingLeaderboard/: CMakeLists.txt  climbingLeaderboard.cpp
hackerRankPractise/problemSolving/countingValleys/: CMakeLists.txt  countingValleys.cpp
hackerRankPractise/problemSolving/cutTheSticks/: CMakeLists.txt  cutTheSticks.cpp
hackerRankPractise/problemSolving/designerPdfViewer/: CMakeLists.txt  designerPdfViewer.cpp
hackerRankPractise/problemSolving/equalizeArray/: CMakeLists.txt  equalizeArray.cpp
hackerRankPractise/problemSolving/extraLongFactorials/: CMakeLists.txt  extraLongFactorials.cpp
hackerRankPractise/problemSolving/fiveDigits/: CMakeLists.txt  fiveDigits.cpp
hackerRankPractise/problemSolving/formingMagicSquare/: CMakeLists.txt  formingMagicSquare.cpp
hackerRankPractise/problemSolving/getMoneySpent/: CMakeLists.txt  getMoneySpent.cpp
hackerRankPractise/problemSolving/hurdleRace/: CMakeLists.txt  hurdleRace.cpp
hackerRankPractise/problemSolving/jumpingOnClouds/: CMakeLists.txt  jumpingOnClouds.cpp
hackerRankPractise/problemSolving/jumpingOnClouds2/: CMakeLists.txt  jumpingOnClouds2.cpp
hackerRankPractise/problemSolving/libraryFine/: CMakeLists.txt  libraryFine.cpp
hackerRankPractise/problemSolving/nonDivisibleSubset/: CMakeLists.txt  nonDivisibleSubset.cpp
hackerRankPractise/problemSolving/organizingContainersOfBalls/: CMakeLists.txt  organizingCointainersOfBalls.cpp
hackerRankPractise/problemSolving/pageCount/: CMakeLists.txt  pageCount.cpp
hackerRankPractise/problemSolving/permutationEquation/: CMakeLists.txt  permutationEquation.cpp
hackerRankPractise/problemSolving/pickingNumbers/: CMakeLists.txt  pickingNumbers.cpp
hackerRankPractise/problemSolving/queensAttack/: CMakeLists.txt  queensAttack.cpp
hackerRankPractise/problemSolving/repeatedString/: CMakeLists.txt  repeatedString.cpp
hackerRankPractise/problemSolving/saveThePrisioner/: CMakeLists.txt  saveThePrisioner.cpp
hackerRankPractise/problemSolving/saveThePrisoner/: CMakeLists.txt
hackerRankPractise/problemSolving/sockMerchant/: CMakeLists.txt  sockMerchant.cpp
hackerRankPractise/problemSolving/squares/: CMakeLists.txt  squares.cpp
(+68 files in other folders)
