cmake_minimum_required(VERSION 3.10)

add_subdirectory(organizingContainersOfBalls)
add_subdirectory(taumBday)
add_subdirectory(acmTeam)
add_subdirectory(queensAttack)
add_subdirectory(equalizeArray)
add_subdirectory(jumpingOnClouds)
add_subdirectory(repeatedString)
add_subdirectory(nonDivisibleSubset)
add_subdirectory(cutTheSticks)
add_subdirectory(libraryFine)
add_subdirectory(squares)
add_subdirectory(appendAndDelete)
add_subdirectory(fiveDigits)
add_subdirectory(jumpingOnClouds2)
add_subdirectory(permutationEquation)
add_subdirectory(circularArrayRotation)
add_subdirectory(saveThePrisoner)
add_subdirectory(viralAdvertising)
add_subdirectory(beautifulDays)
add_subdirectory(angryProfessor)