cmake_minimum_required(VERSION 3.10)

add_subdirectory(organizingContainersOfBalls)
add_subdirectory(taumBday)
add_subdirectory(acmTeam)
add_subdirectory(queensAttack)
add_subdirectory(equalizeArray)
add_subdirectory(jumpingOnClouds)
add_subdirectory(repeatedString)
add_subdirectory(nonDivisibleSubset)
add_subdirectory(cutTheSticks)
add_subdirectory(libraryFine)
add_subdirectory(squares)
add_subdirectory(appendAndDelete)
add_subdirectory(fiveDigits)
add_subdirectory(jumpingOnClouds2)
add_subdirectory(permutationEquation)
add_subdirectory(circularArrayRotation)
add_subdirectory(saveThePrisoner)
add_subdirectory(viralAdvertising)
add_subdirectory(beautifulDays)
add_subdirectory(angryProfessor)
add_subdirectory(utopianTree)
add_subdirectory(designerPdfViewer)
add_subdirectory(hurdleRace)
add_subdirectory(climbingLeaderboard)
add_subdirectory(extraLongFactorials)
add_subdirectory(pageCount)
add_subdirectory(pickingNumbers)
add_subdirectory(formingMagicSquare)
add_subdirectory(catAndMouse)